--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #server.servlet.context-path=/api/v1
 #
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/mise
+spring.datasource.url=jdbc:postgresql://localhost:5432/MISE
 spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
