--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,22 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.13.0</version> <!-- 根据实际情况更新版本 -->
 		</dependency>
+
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>30.1-jre</version> <!-- 使用最新版本 -->
+		</dependency>
+
+		<dependency>
+			<groupId>io.github.resilience4j</groupId>
+			<artifactId>resilience4j-spring-boot2</artifactId>
+			<version>2.0.2</version>
+		</dependency>
+
+
+
+
 	</dependencies>
 
 	<build>
