--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,13 @@ spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# This will create table automatically in your database
-spring.jpa.hibernate.ddl-auto=update
+# Rate Limiter Configuration
+resilience4j.ratelimiter.instances.*.limitForPeriod=10
+resilience4j.ratelimiter.instances.*.limitRefreshPeriod=1s
+resilience4j.ratelimiter.instances.*.timeoutDuration=0
+
+# Circuit Breaker Configuration
+resilience4j.circuitbreaker.instances.*.slidingWindowSize=100
+resilience4j.circuitbreaker.instances.*.permittedNumberOfCallsInHalfOpenState=10
+resilience4j.circuitbreaker.instances.*.waitDurationInOpenState=10000
+resilience4j.circuitbreaker.instances.*.failureRateThreshold=60
