--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/mise
 spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+
 
 # Rate Limiter Configuration
 resilience4j.ratelimiter.instances.*.limitForPeriod=10
@@ -18,3 +20,4 @@ resilience4j.circuitbreaker.instances.*.slidingWindowSize=100
 resilience4j.circuitbreaker.instances.*.permittedNumberOfCallsInHalfOpenState=10
 resilience4j.circuitbreaker.instances.*.waitDurationInOpenState=10000
 resilience4j.circuitbreaker.instances.*.failureRateThreshold=60
+
